--- a/package.json
+++ b/package.json
@@ -9,12 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.2",
-    "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "@chakra-ui/react": "^1.8.6",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.5.2",
+    "aws-sdk": "^2.1094.0",
+    "framer-motion": "^6.2.8",
+    "moment-timezone": "^0.5.34",
+    "nanoid": "^3.3.1",
+    "next": "12.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-intersection-observer": "^8.33.1",
+    "react-moment": "^1.1.1",
+    "react-query": "^3.34.16",
+    "react-use-cookie": "^1.3.0"
   },
   "devDependencies": {
-    "eslint": "8.12.0",
-    "eslint-config-next": "12.1.2"
+    "eslint": "8.11.0",
+    "eslint-config-next": "12.1.0"
   }
 }
